# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[project]
name = "MozPhab"
description = "Phabricator review submission/management tool."
license = "MPL-2.0"
authors = [{name = "Mozilla", email = "conduit-team@mozilla.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control :: Mercurial",
]

dependencies = [
    "distro",
    "glean-sdk==65.*",
    "packaging",
    "python-hglib>=2.6.2",
    "sentry-sdk>=0.14.3",
    "setuptools",
    "colorama>=0.4.6",
]

# Note: please change the `updater.py::check_for_updates` method if the format
# would be different than `>=x.y`.
requires-python = ">=3.9"

# Required for `setuptools_scm` when using only `pyproject.toml` (ie no `setup.cfg`).
dynamic = ["version"]

# Derive version number from version control.
[tool.setuptools_scm]

[tool.setuptools]
packages = ["mozphab", "mozphab.commands"]

[project.urls]
"Repository" = "https://github.com/mozilla-conduit/review"
"Bug Tracker" = "https://bugzilla.mozilla.org"

[project.scripts]
moz-phab = "mozphab.mozphab:run"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77",
    "setuptools_scm[toml]>=7.0.5",
]
